Small fix for search loading icon on mobile

--- a/web/sass-files/sass/partials/_responsive.scss
+++ b/web/sass-files/sass/partials/_responsive.scss
@@ -573,8 +573,7 @@
             .glyphicon-refresh-animate {
                 right: 33px;
                 top: 15px;
-                color: #fff;
-                color: rgba(255,255,255,0.5);
+                color: #aaa;
             }
             .form-control {
                 border: none;
